# WebProject

./: .gitignore  README.md  pyproject.toml
course/: 06-boolenas.html  06-rock-apper-scissors.html  07-functions.html  07-rock-apper-scissors.html  07-rock-papper-scissors.html  08-objects.html  08-rock-papper-scissors.html  09-dom-projects.html  09-dom.html  09-rock-paper-scissor.html  10-dom-projects.html  10-dom-style.css  11-arrays-and-loops.html  12-advanced-functions.html  website.html
course/calculator/: index.html
course/calculator/script/: calculatator.js
course/calculator/style/: style.css
course/exercises/: 10.html  11.html  12.html  9.html
course/rock-paper-scissors/: 10-rock-paper-scissor.html
course/rock-paper-scissors/scripts/: 10-rock-paper-scissor.js
course/rock-paper-scissors/styles/: 10-rock-paper-scissors.css
course/todo-list/: todo-list.html
course/todo-list/script/: todo-list.js
course/todo-list/style/: style.css
data/: cart.js  products.js  products.json
source/: amazon.html  checkout.html  login.html
source/images/icons/: .~lock.2024-NEU-Hanoi-Data-Sheet.xls#  2024-NEU-Hanoi-Data-Sheet.xls  Amazon Login.html
source/images/icons/Amazon Login_files/: login.css  login.js
source/python/: build_api.py  data_processing.py  mongo_connection.py
source/script/: amazon.js  amazonheader.js  login.js
source/styles/: amazon.html  cart-site.css  checkout.css  general.css  header.css  login.css  main.css  sidebar.css
