[tool.poetry]
name = "webproject"
version = "0.1.0"
description = ""
authors = ["tran quang dat <tranquangdatquangtran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.31.1"
pymongo = "^4.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
